--- a/TcpUdpTool/View/TcpClientView.xaml
+++ b/TcpUdpTool/View/TcpClientView.xaml
@@ -5,17 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:TcpUdpTool.View"
-             xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel"
              mc:Ignorable="d" >
 
-    <UserControl.DataContext>
-        <viewmodel:TcpClientViewModel />
-    </UserControl.DataContext>
-
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
@@ -25,9 +17,7 @@
         <GroupBox Header="Connect"
                   Margin="10">
 
-            <Grid Grid.Row="0"
-                  Grid.Column="0"
-                  Margin="10 10 10 0">
+            <Grid Margin="10 10 10 0">
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -105,8 +95,7 @@
                   Margin="10 0 10 10"
                   Padding="0 0 0 10">
 
-            <Grid Grid.Column="0"
-                  Grid.Row="1">
+            <Grid>
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
