--- a/TcpUdpTool/View/TcpClientView.xaml
+++ b/TcpUdpTool/View/TcpClientView.xaml
@@ -179,6 +179,7 @@
 
                 <StackPanel Grid.Column="1"
                             Grid.Row="1"
+                            Grid.ColumnSpan="2"
                             Orientation="Horizontal"
                             VerticalAlignment="Center"
                             Margin="0 0 0 0">
