--- a/TcpUdpTool/Resources/Styles.xaml
+++ b/TcpUdpTool/Resources/Styles.xaml
@@ -32,4 +32,64 @@
         </Setter>
     </Style>
 
+
+    <DataTemplate x:Key="InterfaceListGroupStyleHeaderTemplate">
+        <StackPanel Background="#ffefefef">
+            <TextBlock Padding="8 0 8 0" FontWeight="Bold" Text="{Binding Name}" />
+        </StackPanel>
+    </DataTemplate>
+
+    <Style x:Key="InterfaceListGroupStyleContianerStyle" TargetType="{x:Type GroupItem}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type GroupItem}">
+                    <StackPanel>
+                        <ContentPresenter />
+                        <ItemsPresenter />
+                    </StackPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+        
+    <Style x:Key="InterfaceListStyle" TargetType="{x:Type ComboBox}">
+        <Setter Property="IsEditable" Value="True" />
+        <Setter Property="IsReadOnly" Value="True" />
+        <Setter Property="ItemContainerStyle">
+            <Setter.Value>
+                <Style TargetType="ComboBoxItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ComboBoxItem">
+                                <StackPanel Orientation="Horizontal" Background="{TemplateBinding Background}">
+                                    <StackPanel x:Name="Indicator" Background="Gray" Width="4" Height="20" Visibility="Hidden" />
+                                    <ContentPresenter VerticalAlignment="Center"/>
+                                </StackPanel>
+
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter Property="Background" Value="#ffb6d3ea" />
+                                        <Setter TargetName="Indicator" Property="Visibility" Value="Visible" />
+                                    </Trigger>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#ffd7e3ed" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Setter.Value>
+        </Setter>
+
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <TextBlock Padding="8 0 8 0" Text="{Binding Name}" />
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+
 </ResourceDictionary>
